--- a/css/main-style.css
+++ b/css/main-style.css
@@ -122,10 +122,13 @@ div#projects-container p{
 div#project-row .project{
   text-decoration: none;
   color: black;
+  transition: all ease 0.5s;
 }
 
 div#project-row .project:hover{
   color: #68a0f9;
+  transform: translateY(-1px);
+  box-shadow: 0px 1px 5px #888888;
 }
 
 div#project-row .project p{
@@ -150,4 +153,5 @@ div#project-row .project-description{
 */
 div#project-row{
   margin-bottom: 0px;
+  margin:auto;
 }
