--- a/css/main-style.css
+++ b/css/main-style.css
@@ -157,11 +157,17 @@ div#project-row{
   margin:auto;
 }
 
+.icon{
+  font-size: 2em;
+}
+
+
+
 
 /*
   Mobile
 */
-@media (max-width:63.5em) {
+@media (max-width:65em) {
   div#project-row .project-title{
     font-weight: bold;
     font-size: 4vw;
@@ -178,5 +184,13 @@ div#project-row{
   div#projects-container p{
     font-size: 3vw;
     margin-bottom: 100px;
+  }
+  div#projects-container svg{
+    width: 50px;
+    height: 50px;
+  }
+  nav svg{
+    width: 50px;
+    height: 50px;
   }
 }
