--- a/css/resize.css
+++ b/css/resize.css
@@ -1,6 +1,6 @@
-@media (max-width:1022px) {
+@media (max-width:630px) {
   input#search{
-    margin-bottom: 20px;
+    margin-bottom: 5px;
   }
 }
 
@@ -15,20 +15,30 @@
 }
 
 
-@media (max-width:760px){
+@media (max-width:1025px){
   div#recents-container{
     bottom: 0px;
     border: none;
     border-radius: 0px;
     border-top: 2px solid #e0e0e0;
+    top: 95px;
   }
 
   input#search{
     border: none;
     border-bottom: 2px solid #e0e0e0;
     outline: none;
-    margin-top: 2px;
+    /*margin-top: 2px;*/
     transition: all ease .5s;
     width: 80%;
+  }
+
+  header#header{
+    height: 50px;
+    padding-top: 10px;
+  }
+
+  div#accordion-wrapper{
+    top: 50px;
   }
 }
