--- a/css/main-style.css
+++ b/css/main-style.css
@@ -11,7 +11,7 @@ canvas {
   vertical-align: bottom; }
 
 html {
-  background-color: #6d6d6d;
+  background-color: #5e6070;
   overflow: hidden; }
 
 /*
@@ -119,26 +119,27 @@ html {
   align-content: center;
   flex-direction: column; }
   .project-wrapper a {
-    text-decoration: none; }
+    text-decoration: none;
+    text-decoration-line: none; }
   .project-wrapper .project-info {
     margin: auto;
     max-width: 300px;
     height: auto;
     transition: all linear 0.3s;
     text-align: center;
-    padding-bottom: 10px; }
+    padding-bottom: 10px;
+    color: white; }
     .project-wrapper .project-info:hover {
       transform: translateY(-2px);
       box-shadow: 0px 2px 2px #424242;
-      color: #81bfc6; }
+      color: black; }
+      .project-wrapper .project-info:hover svg {
+        color: black; }
     .project-wrapper .project-info:last-child svg {
       margin-bottom: -20px; }
-    .project-wrapper .project-info:first-child svg {
-      color: #d8d8d8; }
     .project-wrapper .project-info:first-child p {
       font-weight: bold;
       font-size: 15pt;
-      color: white;
       /*Description*/ }
       .project-wrapper .project-info:first-child p:last-child {
         max-width: 300px;
