--- a/css/main-style.scss
+++ b/css/main-style.scss
@@ -4,6 +4,17 @@
 
 $base-text-color: #d8d8d8;
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a,
+span{
+  font-family: 'Reem Kufi', sans-serif;
+}
 
 
 #particles-js{
@@ -18,7 +29,7 @@ canvas {
 }
 
 html{
-  background-color: #5e6070;
+  background-color: #646782;
   overflow: hidden;
 }
 
@@ -80,7 +91,48 @@ html{
   grid-template-rows: 1fr;
   font-size: 25pt;
 
-  
+
+  .side-button{
+    span{
+      position: relative;
+    }
+    span:before{
+      content: '';
+      background: rgba(255,255,255,0);
+      position: absolute;
+      left: 0;
+      top: 5px;
+      width: 100%;
+      height: 2px;
+      transition: all .3s ease;
+    }
+
+    span:hover:before{
+      transform: translateY(-5px);
+      background: rgba(255,255,255,.5);
+    }
+
+    span:after{
+      content: '';
+      background: rgba(255,255,255,.0);
+      position: absolute;
+      left: 0;
+      bottom: 5px;
+      width: 100%;
+      height: 2px;
+      transition: all ease 0.3s;
+    }
+
+
+    
+
+    span:hover:after{
+      transform: translateY(5px);
+      background: rgba(255,255,255,.5);
+    }
+
+    
+  }
 
   .about-wrapper{
     grid-area: about;
@@ -119,7 +171,7 @@ html{
     grid-row: 1;
 
     a{
-      color: black;
+      color: $base-text-color;
     }
   }
 
@@ -152,6 +204,8 @@ html{
   justify-content: center;
   align-content: center;
   flex-direction: column;
+  
+  
 
   a{
     text-decoration: none;
@@ -159,6 +213,7 @@ html{
   }
 
   .project-info{
+    
     margin: auto;
     max-width: 300px;
     height: auto;
@@ -167,10 +222,14 @@ html{
     padding-bottom: 10px;
     color: white;
 
+    svg{
+      transition: all linear 0.3s;
+    }
+
     &:hover{
       transform: translateY(-2px);
       box-shadow: 0px 2px 2px #424242;
-      color: black;
+      color: white;
       svg{
         color: black;
       }
@@ -183,8 +242,8 @@ html{
 
     &:first-child p{
       font-weight: bold;
-      font-size: 15pt;
-
+      font-size: 13pt;
+      font-family: 'Varela', sans-serif;
       /*Description*/
       &:last-child{
         max-width: 300px;
@@ -204,16 +263,6 @@ html{
 
 
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-p,
-a,
-span{
-  font-family: 'Reem Kufi', sans-serif;
-}
+
 
 
