--- a/css/main-style.css
+++ b/css/main-style.css
@@ -14,12 +14,14 @@ span {
 
 #particles-js {
   position: absolute;
-  width: 100%;
-  height: 100%; }
+  left: 0;
+  right: 0;
+  bottom: 0;
+  top: 0; }
 
 canvas {
   display: block;
-  vertical-align: bottom; }
+  position: absolute; }
 
 html {
   background-color: #646782;
@@ -38,7 +40,7 @@ html {
   top: 0;
   position: fixed;
   border: 6px solid white;
-  margin: 20px;
+  margin: 0px;
   overflow-y: scroll;
   /*Grid*/
   display: grid;
@@ -255,10 +257,14 @@ html {
     border: 0px solid white;
     margin: 0px;
     overflow-y: scroll;
-    display: grid;
+    display: block;
+    /*
     grid-gap: 20px;
-    grid-template-rows: 1fr 1fr 5fr;
-    grid-template-areas: "name name name" "links links links" "projects projects projects"; }
+    grid-template-rows: 1fr 1fr 5fr;    
+    grid-template-areas: "name name name"
+                         "links links links"
+                         "projects projects projects";
+                         */ }
     .main-wrapper .row {
       display: none; }
     .main-wrapper .resize {
